src/test/ui/type-alias-impl-trait/closures_in_branches.stderr
error[E0282]: type annotations needed
  --> $DIR/closures_in_branches.rs:21:10
   |
LL |         |x| x.len()
   |          ^
   |
   = note: type must be known at this point
help: consider giving this closure parameter an explicit type
   |
LL |         |x: _| x.len()
   |           +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
